# SCPI_Parser

./: .gitignore  CMakeLists.txt  README.md
.github/workflow/: build.yml
.github/workflows/: c-cpp.yml
sample/cli/: CMakeLists.txt  main.cpp
sample/common/: scpi_def.cpp  scpi_def.hpp
scpi_lib/: CMakeLists.txt  ScpiLib.pc.in
scpi_lib/inc/scpi/: commands.hpp  ieee.hpp  interface.hpp  message.hpp  parser.hpp  scpi.hpp  units.hpp
scpi_lib/src/: commands.cpp  ieee.cpp  message.cpp  parser.cpp  units.cpp
